tags/quex-0.65.4/TEST/GOOD/bug-2799244.sh--good-2.txt
(*) Full Error

(*) perform compilation
# Compilation error on return 'Token' instead 'bool'
# is intended and correctly expected behavior.
In file included from Simple-token_ids:25:0,
                 from Simple:68,
                 from Simple.cpp:2:
good-2.qx: In function ‘bool Token_take_text(Token*, quex::Simple*, const uint8_t*, const uint8_t*)’:
good-2.qx:10:18: error: cannot convert ‘Token’ to ‘bool’ in return
 }
                  ^
